--- a/report/report.Rmd
+++ b/report/report.Rmd
@@ -33,20 +33,16 @@ knitr::opts_chunk$set(
   fig.align = "center"
   )
 knitr::opts_chunk$set(fig.width=10, fig.height=4)
-
 library(tidyverse)
 library(here)
 library(knitr)
 library(kableExtra)
-
 options(knitr.kable.NA = '')
-
 kable_standard <- function(...) {
   kable(..., booktabs = TRUE, linesep = "") %>% 
     kable_styling(full_width = FALSE) %>% 
     kable_styling(latex_options = "HOLD_position")
 }
-
 ```
 
 
@@ -54,33 +50,39 @@ kable_standard <- function(...) {
 ## Summary {-} 
 <!-- the {-} means don't number this section -->
 
-This report details a series of complementary visualizations to help public health officials and health system leaders understand the spread of COVID-19 in the state of Wisconsin.  The visualizations are available interactively at <https://data-viz.it.wisc.edu/wi-metro-growth-rate/> with data that updates daily and summaries that update weekly.  We rely on data from the New York Times collection of confirmed cases and deaths by county, the Corona Data Scraper world region time-series dataset, and population counts and metro area definitions from the U.S Census.  
+This report details a series of complementary visualizations to help public health officials and health system leaders understand the spread of COVID-19 in the state of Wisconsin. The visualizations are available interactively at <https://data-viz.it.wisc.edu/wi-metro-growth-rate/> with data that updates daily and summaries that update weekly. We use data from the New York Times collection of confirmed cases and deaths by county, the Corona Data Scraper world region time-series dataset, and population counts and metro area definitions from the U.S Census. 
 
-First, inspired by work from the New York Times, we describe two visualizations that plot the growth rate of COVID-19 cases measured as average daily change over the last 7 days.  By looking directly at the relative spread of cases, areas with high growth are easily identifiable.  In recent data, this has identified the areas of Green Bay, Janesville, Racine, and Appleton as areas of moderately high growth as of 5/4/2020.  Among these areas, Green Bay and Janesville are seeing a slow down in the growth rate, whereas Racine and Appleton are increasing their growth slightly.  In addition to looking at growth rates over time, measuring them against confirmed cases per capita helps to compare outbreaks that happen at different times.  From this visualization, we can see that Green Bay's outbreak appears much worse than the initial outbreak in Madison and Milwaukee on a per capita basis.  
+First, inspired by work from the New York Times, we describe two visualizations that plot the growth rate of COVID-19 cases measured as average daily change over the last 7 days. By looking directly at the relative spread of cases, areas with high growth are easily identifiable. In recent data, this has identified the areas of Green Bay, Janesville, Racine, and Appleton as areas of moderately high growth as of 5/4/2020. Among these areas, Green Bay and Janesville are seeing a slow down in the growth rate, whereas Racine and Appleton are increasing their growth slightly. In addition to looking at growth rates over time, measuring them against confirmed cases per capita helps to compare outbreaks that happen at different times. From this visualization, we can see that Green Bay's outbreak appears much worse than the initial outbreak in Madison and Milwaukee on a per capita basis. 
 
-In the second major section, we demonstrate how choropleth maps of COVID-19 confirmed cases and deaths in metropolitan areas across the U.S. allow for a reasonable comparison of Wisconsin areas to well-known epicenters.  Many of the areas in Wisconsin appear to be affected less than other large metropolitan areas like New York, Chicago, Seattle, Detroit, and New Orleans.  These maps also allow us to see spatial trends in the data.  It doesn't appear that Wisconsin has major spatial outbreak clusters, whereas the New York/New Jersey/Connecticut area and much of Colorado seem to have large clusters of confirmed cases and deaths.  
+In the second major section, we demonstrate how choropleth maps of COVID-19 confirmed cases and deaths in metropolitan areas across the U.S. allow for a reasonable comparison of Wisconsin areas to well-known epicenters. Many of the areas in Wisconsin appear to be affected less than other large metropolitan areas like New York, Chicago, Seattle, Detroit, and New Orleans. These maps also allow us to see spatial trends in the data. It doesn't appear that Wisconsin has major spatial outbreak clusters, whereas the New York/New Jersey/Connecticut area and much of Colorado seem to have large clusters of confirmed cases and deaths. 
 
-Finally, we describe some ad-hoc follow-up work relating to the idea of growth rates.  At the recommendation of Reka Sundaram-Stukel, we compare the growth rate of cases to the growth rate of unemployment claims to find that the unemployment claims slowed down much faster than confirmed cases, although the trends between the two are striking.  Working with Corey Zarecki at Gundersen Health, we developed visualizations with different measures of growth that work well for counties with small populations and few cases.  Here, looking directly at an average of new cases compared to cases, we were able to help identify hot-spots that might see the continued growth of cases.  Working with these individuals has demonstrated the value of our visualizations without relying on modeling approaches or predictions.  
+Finally, we describe some ad-hoc follow-up work relating to the idea of growth rates. At the recommendation of Reka Sundaram-Stukel, we compare the growth rate of cases to the growth rate of unemployment claims to find that the unemployment claims slowed down much faster than confirmed cases, although the trends between the two are striking. Working with Corey Zarecki at Gundersen Health, we developed visualizations with different measures of growth that work well for counties with small populations and few cases. Here, looking directly at an average of new cases compared to cases, we were able to help identify hot-spots that might see the continued growth of cases. Working with these individuals has demonstrated the value of our visualizations without relying on modeling approaches or predictions. 
 
 # Introduction
 
-- covid-19
-- covid-19 visualizations
-<!-- - nyt inspiration -->
+In December 2019, a local outbreak of pneumonia of initially unknown cause was detected in the city of Wuhan contained in the Hubei region of China and was quickly determined to be caused by a novel coronavirus, namely severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). The World Health Organization declared the outbreak a Public Health Emergency of International Concern on January 20, 2020 and a pandemic on March 11, 2020. The outbreak has since spread to at least 212 countries and territories with more than 3.58 million confirmed cases and 252,000 deaths globally.
 
-Among the variety of COVID-19 visualizations we saw, a set of visualizations by the New York Times jumped out for its focus on trying to determine where the virus was spreading quickly.  This worked well early on when only a few metropolitan areas were of focus but became difficult when many were in comparison.  Focussing specifically on Wisconsin metro areas offered an opportunity to search directly for trends that would be relevant to Wisconsin health offcials, health system leaders, and other interested parties.  This report describes the set of visualizations implemented based on this inspiration and feedback from key stakeholders.  
+According to a New York Times database, more than 1,186,900 people in the United States have been infected with the coronavirus and at least 68,800 have died, including all 50 states, Washington, DC, and four territories. More than 1,000 additional deaths have been announced every day since April 2.
+
+The continued spread of the virus, and the continued rise in the death toll, comes as political leaders seek to reopen parts of the country. But stay-at-home orders remain in effect in many states, Americans have been told to wear face coverings in public and true normalcy remains a distant vision and more events are scrubbed from the calendar. 
+
+The outbreak in this country, which now has the highest number of known cases in the world, has exploded over the last two months. In recent weeks, more than 20,000 new cases have been announced across the United States each day, keeping the country on a stubborn plateau instead of the sharp downward curve scientists had hoped for. Given that COVID-19 affects the health and well-being of all residents in United States, local and state officials need information about the extent and impact of COVID-19 to make decisions.
+
+
+
+Given the variety of COVID-19 visualizations, a set of visualizations by the New York Times was noteworthy for its focus on trying to determine where the virus was spreading quickly. This worked well early on when only a few metropolitan areas were of focus but became difficult when many were in comparison. Focusing specifically on Wisconsin metro areas offered an opportunity to search directly for trends that would be relevant to Wisconsin health offcials, health system leaders, and other interested parties. This report describes the set of visualizations implemented based on this inspiration and feedback from key stakeholders. 
 
 # Data Sources
 
-
+As the coronavirus has spread across the United States, killing hundreds of people and sickening tens of thousands more, comprehensive data on the extent of the outbreak has been difficult to come by. No single group has provided the public with an accurate, updated record of coronavirus cases at the county level. To fill the space, The New York Times has launched an around the clock effort to count known coronavirus cases in the United States, collecting information from federal, state and local officials. The numbers in this dataset are updated several times a day based on the latest information The Times are gathering from around the country. The dataset was made available to the public on March 27, 2020. We decided to use the the New Yourk Times database of United States coronavirus cases at the county level versus other data sources because of the accuracy and availability in addition to the New York Times graphics providing the motivation for the project. Additionally, we used Corona Data Scraper for comparative timeseries of global regions and cities pulling COVID-19 Coronavirus case data from verified sources, namely for coronavirus cases of the Hubei region in China containing the city of Wuhan and Lombardy region in Italy containing the city of Milan, both areas effected by the coronavirus epidemic. Moreover, the United States Census Bureau data was used for county population totals to calculate density measurements; delineation files to define metropolitan and micropolitan areas and aggregate data by county; and cartographic boundary files to visualize data via spatial polygons and other special features. Specifically, we used the 2019 estimates of the resident population for counties from the county population totals: 2010-2019 dataset, the core based statistical areas (CBSAs) from the delineation files, and the geometry from the cartographic boundary files.
 
 # Growth Rate Visualizations
 
-Much of the inspiration for this project came from two articles in the New York Times that showed visualizations highlighting how fast COVID-19 was spreading, and where.  The first, [*Four Ways to Measure Coronavirus Outbreaks in U.S. Metro Areas*](https://www.nytimes.com/interactive/2020/03/27/upshot/coronavirus-new-york-comparison.html), introduced a few visualizations and explained why looking at them provided different insights into the spread of the pandemic.  The second article, [*How Severe Are Coronavirus Outbreaks Across the U.S.? Look Up Any Metro Area*](https://www.nytimes.com/interactive/2020/04/03/upshot/coronavirus-metro-area-tracker.html), expanded on the visualizations by adding a few more and updating daily with new data and hot-spots.  While the later article had a feature to interactively look-up any metro area, Steve Goldstein thought that we could add value by re-creating these charts specifically for the Wisconsin metro areas, with a few regions for comparison.  
+The initial inspiration for the project came from two articles in the New York Times that showed visualizations highlighting how fast COVID-19 was spreading, and where. The first article, [*Four Ways to Measure Coronavirus Outbreaks in U.S. Metro Areas*](https://www.nytimes.com/interactive/2020/03/27/upshot/coronavirus-new-york-comparison.html), introduced a few visualizations and explained different insights into the spread of the pandemic. The second article, [*How Severe Are Coronavirus Outbreaks Across the U.S.? Look Up Any Metro Area*](https://www.nytimes.com/interactive/2020/04/03/upshot/coronavirus-metro-area-tracker.html), expanded on the visualizations by adding a few more and updating daily with new data and hot-spots. While the later article had a feature to interactively look-up any metro area, Steve Goldstein thought that we could add value by re-creating these charts specifically for the Wisconsin metro areas, with a few regions for comparison. 
 
-We saw a lot of value in looking specifically at growth rates.  Growth rates are important in comparing different metropolitan areas because they capture the **relative spread** of the virus.  Both aspects are important: **spread** is an important metric to decide where to intervene and to understand whether a previous intervention is working, while **relative** measures matter when looking at smaller metro areas or metro areas where the disease started later.  Many of the visualizations that look at case count over time (especially comparing many different areas) tend to hide those regions where COVID-19 started spreading later.  By focussing directly on the growth rate, we can create visualizations that can identify areas in which the disease is growing fast, no matter when the virus started affecting the area. 
+We saw a lot of value in looking specifically at growth rates. Growth rates are important in comparing different metropolitan areas because they capture the **relative spread** of the virus. Both aspects are important: **spread** is an important metric to decide where to intervene and to understand whether a previous intervention is working, while **relative** measures matter when looking at smaller metro areas or metro areas where the disease started later. Many of the visualizations that look at case count over time (especially comparing many different areas) tend to hide those regions where COVID-19 started spreading later. By focussing directly on the growth rate, we can create visualizations that can identify areas in which the disease is growing fast, no matter when the virus started affecting the area. 
 
-We operationalize the growth rate of COVID-19 in a metropolitan area by the following calculation for the average daily change in confirmed cases.  It's worth noting that the original NYT article doesn't mention how they calculate this metric, but our calculation is based on a geometric growth rate averaged over the previous 7 days (to mitigate issues where reported cases dip over the weekend).  
+We operationalize the growth rate of COVID-19 in a metropolitan area by the following calculation for the average daily change in confirmed cases. It's worth noting that the original NYT article doesn't mention how they calculate this metric, but our calculation is based on a geometric growth rate averaged over the previous 7 days (to mitigate issues where reported cases dip over the weekend). 
 
 \begin{equation}
 \textrm{avg daily change}_t =  \left( \frac{\textrm{cases}_t}{\textrm{cases}_{t-7}} \right)^{(1/7)} - 1 
@@ -88,7 +90,7 @@ We operationalize the growth rate of COVID-19 in a metropolitan area by the foll
 
 ## Daily Growth Rate over Time
 
-The first main plot shows the daily growth rate of confirmed cases over the last 4 weeks.  Figure \ref{fig:gr-time} shows this visualization from 5/4/2020 for the Wisconsin metropolitan areas with at least 30 cases.  Metro areas with fewer than 30 cases were omitted because of the large variance and potentially misleading results growth rates provide when the number of cases is small.  For example, in the early outbreak stage, an increase in confirmed cases from 4 to 8 looks like 100\% growth, but we don't expect that true cases doubled.  It's much more likely that these cases were simply discovered in one day.  
+The first main plot shows the daily growth rate of confirmed cases over the last 4 weeks. Figure \ref{fig:gr-time} shows this visualization from 5/4/2020 for the Wisconsin metropolitan areas with at least 30 cases. Metro areas with fewer than 30 cases were omitted because of the large variance and potentially misleading results growth rates provide when the number of cases is small. For example, in the early outbreak stage, an increase in confirmed cases from 4 to 8 looks like 100\% growth, but we don't expect that true cases doubled. It's much more likely that these cases were simply discovered in one day. 
 
 ```{r gr-time, fig.cap = "\\textit{figure caption}", out.width = "90%"}
 knitr::include_graphics(
@@ -96,15 +98,15 @@ knitr::include_graphics(
 )
 ```
 
-It's clear from Figure \ref{fig:gr-time} that the Green Bay metro area has seen the highest growth in the last 4 weeks, consistently around 15-20\% until the last week or so.  This is one strength of the plot, allowing us to see right now where the virus is spreading the most (assuming that confirmed cases follow similar trends to actual cases).  Another strength is being able to quickly see where the spread is speeding-up or slowing-down.  For example, the Green Bay metro area has seen a slow down in the growth rate, although notably, the number of cases is still *increasing* at a high rate.  It's also clear that a few areas--Oshkosh-Neenah, Eau Claire, and Appleton--are seeing an increase in the spread, corresponding to an acceleration of the extent of COVID-19.  
+It's clear from Figure \ref{fig:gr-time} that the Green Bay metro area has seen the highest growth in the last 4 weeks, consistently around 15-20\% until the last week or so. This is one strength of the plot, allowing us to see right now where the virus is spreading the most (assuming that confirmed cases follow similar trends to actual cases). Another strength is being able to quickly see where the spread is speeding-up or slowing-down. For example, the Green Bay metro area has seen a slow down in the growth rate, although notably, the number of cases is still *increasing* at a high rate. It's also clear that a few areas--Oshkosh-Neenah, Eau Claire, and Appleton--are seeing an increase in the spread, corresponding to an acceleration of the extent of COVID-19. 
 
-As with any visualization, there are some areas where it is less helpful.  Because outbreaks may happen at different times, it's hard to compare metro areas where the spread happens at different times.  For example, Madison and Milwaukee saw a large growth in confirmed cases in mid-March, but that doesn't show up when looking at data from the previous 4 weeks.  Another problem is that case data quality may vary a lot by place.  It seems likely that the bigger metro areas may have received more testing capacity early on in the pandemic, whereas smaller areas may have less reliable data.  
+As with any visualization, there are some areas where it is less helpful. Because outbreaks may happen at different times, it's hard to compare metro areas where the spread happens at different times. For example, Madison and Milwaukee saw a large growth in confirmed cases in mid-March, but that doesn't show up when looking at data from the previous 4 weeks. Another problem is that case data quality may vary a lot by place. It seems likely that the bigger metro areas may have received more testing capacity early on in the pandemic, whereas smaller areas may have less reliable data. 
 
-We added several interactivity features to this visualization.  Double-clicking on a region in the legend will start a comparison, and others can be added to the comparison by single-clicking on them.  Hovering over any data point provides details-on-demand including the metro area name, date, cases, and daily change.  This gives context to the visualization and allows a user to dig deep into the data that they care about.  
+We added several interactivity features to this visualization. Double-clicking on a region in the legend will start a comparison, and others can be added to the comparison by single-clicking on them. Hovering over any data point provides details-on-demand including the metro area name, date, cases, and daily change. This gives context to the visualization and allows a user to dig deep into the data that they care about. 
 
 ## Daily Growth Rate by Case Count
 
-It can be important to distinguish between places where cases are growing fast with few cases and places where cases are numerous and still growing fast.  The later type of area is at severe risk for overwhelming the hospital system, whereas the former may have more time to prepare.  The plot of growth rate over time has a hard time distinguishing between these two types of areas, which is where the second main plot can be useful.  Figure \ref{fig:gr-cases} shows the growth rate of daily cases compares to the confirmed cases per thousand people updated as of 5/4/2020.  This has the same y-axis as Figure \ref{fig:gr-time}, but the x-axis now shows a measure of the extent of COVID-19 in the metro area.  
+It can be important to distinguish between places where cases are growing fast with few cases and places where cases are numerous and still growing fast. The later type of area is at severe risk for overwhelming the hospital system, whereas the former may have more time to prepare. The plot of growth rate over time has a hard time distinguishing between these two types of areas, which is where the second main plot can be useful. Figure \ref{fig:gr-cases} shows the growth rate of daily cases compares to the confirmed cases per thousand people updated as of 5/4/2020. This has the same y-axis as Figure \ref{fig:gr-time}, but the x-axis now shows a measure of the extent of COVID-19 in the metro area. 
 
 ```{r gr-cases, fig.cap = "\\textit{figure caption}", out.width = "90%"}
 knitr::include_graphics(
@@ -112,28 +114,43 @@ knitr::include_graphics(
 )
 ```
 
-Figure \ref{fig:gr-cases} has a few important features.  First, confirmed cases (on the x-axis) can only increase, and so the lines will continue to move (either slowly or quickly) to the right.  The further to the right, the worse the extent of the disease is in a given area.  Second, the goal of a given area is to reach an average daily change of 0\%.  This is the point where there are no new cases.  So even if growth rates are low or trending downward, the area is still seeing an increase in the number of cases.  Places with slower growth rates will often have points much closer together, and so it can be hard to judge time from this visualization.  
+Figure \ref{fig:gr-cases} has a few important features. First, confirmed cases (on the x-axis) can only increase, and so the lines will continue to move (either slowly or quickly) to the right. The further to the right, the worse the extent of the disease is in a given area. Second, the goal of a given area is to reach an average daily change of 0\%. This is the point where there are no new cases. So even if growth rates are low or trending downward, the area is still seeing an increase in the number of cases. Places with slower growth rates will often have points much closer together, and so it can be hard to judge time from this visualization. 
 
-Compared with Figure \ref{fig:gr-time}, Figure \ref{fig:gr-cases} makes clear that Green Bay, with it's sustained high growth rate, has been the hardest hit Wisconsin metropolitan area by are.  The cases per thousand are close to double that of Milwaukee, the next highest in Wisconsin.  Other areas that were showing higher growth rates recently, Oshkosh-Neenah, Eau Claire, and Appleton, all have a very low number of cases per capita, indicating the disease might not be wide-spread there yet.  This figure also allows us to compare areas that saw large outbreaks at different times.  We can see that Madison, which had high growth rates in mid-March, is now seeing very little spread, whereas Racine has continued to grow, and is accelerating in recent days, despite seeing a drop in growth rate similar to Madison early on.  
+Compared with Figure \ref{fig:gr-time}, Figure \ref{fig:gr-cases} makes clear that Green Bay, with it's sustained high growth rate, has been the hardest hit Wisconsin metropolitan area by are. The cases per thousand are close to double that of Milwaukee, the next highest in Wisconsin. Other areas that were showing higher growth rates recently, Oshkosh-Neenah, Eau Claire, and Appleton, all have a very low number of cases per capita, indicating the disease might not be wide-spread there yet. This figure also allows us to compare areas that saw large outbreaks at different times. We can see that Madison, which had high growth rates in mid-March, is now seeing very little spread, whereas Racine has continued to grow, and is accelerating in recent days, despite seeing a drop in growth rate similar to Madison early on. 
 
-Figure \ref{fig:gr-cases} suffers from the problem that it is difficult to read at first.  The combination of axes can provide valuable information, but one has to be careful not to interpret a decreasing trend as the end of the growth.  Any positive growth rate indicates that COVID-19 is still spreading.  This also relies on confirmed cases being similar to actual cases.  When comparing metro areas at different times, this assumption might be less valid.  For example, it may be the case that many people in Milwaukee went undetected early on, and have since recovered.  An area like Green Bay, in which the CDC went to investigate, may have seen much larger portions of the population tested, thus detecting more cases than Milwaukee.  Nevertheless, this plot has a lot of advantages for those deciding where to focus interventions.  
-
+Figure \ref{fig:gr-cases} suffers from the problem that it is difficult to read at first. The combination of axes can provide valuable information, but one has to be careful not to interpret a decreasing trend as the end of the growth. Any positive growth rate indicates that COVID-19 is still spreading. This also relies on confirmed cases being similar to actual cases. When comparing metro areas at different times, this assumption might be less valid. For example, it may be the case that many people in Milwaukee went undetected early on, and have since recovered. An area like Green Bay, in which the CDC went to investigate, may have seen much larger portions of the population tested, thus detecting more cases than Milwaukee. Nevertheless, this plot has a lot of advantages for those deciding where to focus interventions. 
 
 # Maps of Metro Areas
 
 ## Map of Confirmed Cases per 1,000 People
 
-- plot
-- pros/cons
-- add some example findings
+In the early stages of an outbreak, the population size doesn't matter where one infected person will probably infect a few people, whether that person lives in a metropolitan area of 100,000 or one of 10 million. But as an epidemic progresses, the number of cases per capita can provide a good measure of the prevalence of coronavirus in a community. Per capita measurements also give a sense of how strained a community’s health care system has become, since larger places tend to have more medical resources.
+
+To make useful per capita comparisons, we have focused on metropolitan areas instead of counties. That is because metropolitan areas roughly correspond with the regions where the virus might spread quickly among families, co-workers or commuters.
+
+```{r map-cases, fig.cap = "\\textit{figure caption}", out.width = "90%"}
+knitr::include_graphics(
+  here("report/figures/map-cases-us.png")
+)
+```
+
+Figure \ref{fig:map-cases} is a map of confirmed cases per capita at the metro area level in the continental United States. Note: This plot is interactive where hovering over a metropolitan area provides details on demand including the name of the metro area, exact counts, population, and per capita measurements. The color of the spatial area and the tool tip is encoded by the density measurement. The metro area of Madison, WI is on the lower end of the spectrum whereas New York and New Orleans is on the higher end of the spectrum. Moreover, we can identify hot-spots at the metropolitan areas of Boston-Cambridge-Newton, MA-NH, Detroit-Warren-Dearborn, MI, and Chicago-Naperville-Elgin, IL-IN-WI as well as the micropolitan areas of Albany, GA and Pine Bluff, AR.
+
+The number of confirmed cases is an imperfect measure of what we really care about: the prevalence of the virus in the population, and therefore if it is early in the epidemic, the number of people who are sick or may be contagious. The limited availability of testing in some places means that many people with coronavirus will not be counted among the confirmed cases. And the varying rates of testing across states and countries make it hard to compare the number of confirmed cases in different regions.
 
 ## Map of Confirmed Deaths per 1,000 People
 
-- plot
-- pros/cons
-- add some example findings
+Examining deaths can allow for a more direct comparison between communities, since it avoids many of the problems with variable testing. Testing differences matter less in measuring deaths because in most places with established outbreaks in the United States, the sickest patients are getting tested. That may be less true in other parts of the world where patients who die outside hospitals in Britain and Italy have, in some cases, been omitted from official data.
 
+```{r map-deaths, fig.cap = "\\textit{figure caption}", out.width = "90%"}
+knitr::include_graphics(
+  here("report/figures/map-deaths-us.png")
+)
+```
 
+Figure \ref{fig:map-deaths} is a map of confirmed deaths per capita at the metro area level in the continental United States. Note: This plot is interactive where hovering over a metropolitan area provides details on demand including the name of the metro area, exact counts, population, and per capita measurements. Similar to Figure \ref{fig:map-cases}, the color of the spatial area and the tool tip is encoded by the density measurement. Equivalently, the metro area of Madison, WI is on the lower end of the spectrum whereas New York and New Orleans is on the higher end of the spectrum in addition to the hot-spots at the metropolitan areas of Boston-Cambridge-Newton, MA-NH, Detroit-Warren-Dearborn, MI, Chicago-Naperville-Elgin, IL-IN-WI, and Flagstaff, AZ as well as the micropolitan areas of Albany, GA and Pine Bluff, AR. Additionally, we can identify two other hot-spots at the metropolitan areas of   Indianapolis-Caramel-Anderson, IN and Denver-Aurora-Lakewood, CO most likely associated with various demographic and environmental factors including health and age.
+
+However, measuring only deaths has drawbacks as well. We know that the death rate from coronavirus differs depending on the age and health of the populations affected and the availability of medical resources, like ventilators. That means that per capita rates may look high in places where the virus has infiltrated nursing homes, for example, even if it has not spread widely through the rest of the community. Because patients who die of COVID-19 tend to be sick for weeks first, counting deaths may also understate the current size of the outbreak in a given place if it is growing quickly.
 
 # Follow-up work
 
@@ -149,10 +166,13 @@ Figure \ref{fig:gr-cases} suffers from the problem that it is difficult to read 
 
 ## Future work
 
+The COVID-19 epidemic is transitioning from the initial growth phase to the current plateau. We plan to implement two more visualizations that are in the pipeline to take into account multiple facets and characterize this second stage. We intend to visualize the effective reproduction rate of the virus $R_t$ by the number of new cases over seven day lag. The advantage of the visualization is to measure the infection growth rate versus new case count in the amount of testing done by each county over time for smaller metropolitan and micropolitan areas in the state of Wisconsin. We hope to extend the Bulwark press release and graphics and the county-level Instantaneous $R_0$ in Wisconsin via the Cori 2013/Thompson 2019 models by means of confirmed case counts and serial interval provided by Prof. Doerte Doepfer. 
+
+Moreover, we intend to visualize the testing per capita over time including positive test rate and the level of testing needed to safely reopen the area. As previously stated, the main con of confirmed cases is counts are a function of testing such that an increase in testing results in an increase confirmed cases where the positive test rate held constant. As some governors consider easing social distancing restrictions, new estimates by researchers at Harvard University suggest that the United States cannot safely reopen unless it conducts more than three times the number of coronavirus tests it is currently administering over the next month. Given the recent surge in testing, we hope to extend the New York Times graphics for metropolitan and micropolitan areas in the state of Wisconsin. 
 
 # Conclusions
 
-During this pandemic, there's no shortage of visualizations to try and understand the rapidly changing state of the world.  Focussing on growth rates and maps of metropolitan areas, we implemented visualizations similar to those that have appeared in the New York Times for Wisconsin metro areas.  By measuring the growth in daily confirmed cases, the first two visualizations excel in showing areas with high growth, and whether that growth is increasing or decreasing.  This is important for public health officials and health system leaders to know where to spend resources to fight the spread of COVID-19.  Mapping confirmed cases and deaths by metro area helps to focus on spatial trends in the spread and group together counties from similar regions.  This work has opened the door for additional collaborations, including a striking comparison between the growth of cases and that of unemployment claims and visualizations for counties with few cases that mimic the spirit of our main plots.  In the midst of this pandemic, this work suggests that statisticians can provide value by using statistical thinking to design effective visualizations.  We hope to continue with future work that incorporates the differences in testing and other measures of disease spread such as $R_0$ from epidemiological models.  
+During this pandemic, there's no shortage of visualizations to try and understand the rapidly changing state of the world. Focussing on growth rates and maps of metropolitan areas, we implemented visualizations similar to those that have appeared in the New York Times for Wisconsin metro areas. By measuring the growth in daily confirmed cases, the first two visualizations excel in showing areas with high growth, and whether that growth is increasing or decreasing. This is important for public health officials and health system leaders to know where to spend resources to fight the spread of COVID-19. Mapping confirmed cases and deaths by metro area helps to focus on spatial trends in the spread and group together counties from similar regions. This work has opened the door for additional collaborations, including a striking comparison between the growth of cases and that of unemployment claims and visualizations for counties with few cases that mimic the spirit of our main plots. In the midst of this pandemic, this work suggests that statisticians can provide value by using statistical thinking to design effective visualizations. We hope to continue with future work that incorporates the differences in testing and other measures of disease spread such as $R_0$ from epidemiological models. 
 
 
 
@@ -181,5 +201,3 @@ During this pandemic, there's no shortage of visualizations to try and understan
 <!-- ``` -->
 
 <!-- Aggregating the seizure data into three month periods, Figure \ref{fig:seizure-dind}  -->
-
-
